--- a/app/globals.css
+++ b/app/globals.css
@@ -2,16 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"); */
-
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  /* font-family: "Montserrat", sans-serif; */
 }
 
 :root {
@@ -29,7 +25,7 @@
 
 html,
 body {
-  font-family: var(--font-montserrat);
+  font-family: "Montserrat", sans-serif;
   max-width: 100vw;
   overflow-x: hidden;
   color: var(--color-100);
@@ -44,13 +40,13 @@ label,
 button,
 link,
 tr {
-  font-family: var(--font-nunito);
+  font-family: "Nunito Sans", sans-serif;
   font-weight: 500;
 }
 
 h1,
 h2,
 th {
-  font-family: var(--font-montserrat);
+  font-family: "Montserrat", sans-serif;
   font-weight: 700;
 }
