--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
   padding: 0;
@@ -32,21 +32,25 @@ body {
   background-color: var(--color-10);
 }
 
-p,
-h3,
-span,
-input,
-label,
-button,
-link,
-tr {
-  font-family: "Nunito Sans", sans-serif;
-  font-weight: 500;
-}
 
 h1,
 h2,
 th {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
+}
+
+.bg-white::-webkit-scrollbar {
+  width: 8px; 
+}
+
+.bg-white::-webkit-scrollbar-thumb {
+  background-color: #4a5568; 
+  border-radius: 10px; 
+  border: 3px solid #f1f1f1;
+}
+
+.bg-white {
+  scrollbar-width: thin; 
+  scrollbar-color: #a8d0db #f1f1f1; 
 }
